force-app/main/default/objects/plaunch__Common_Objection_Label__c/plaunch__Common_Objection_Label__c.object-meta.xml
<CustomObject>
    <description>Multi languahe support for common objections</description>
    <label>Common Objection Label</label>
    <nameField>
        <label>Common Objection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Common Objection Labels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>