force-app/main/default/objects/plaunch__Common_Objection_Label__c/fields/plaunch__LanguageLocale__c.field-meta.xml
<CustomField>
    <fullName>plaunch__LanguageLocale__c</fullName>
    <label>LanguageLocale</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>