force-app/main/default/objects/plaunch__Common_Objection_Label__c/fields/plaunch__Text__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Text__c</fullName>
    <label>Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>